# perceptron

./: .gitignore  README.md  pyproject.toml
examples/: digit-recognizer.py
src/perceptron/: __init__.py  core.py
