[project]
name = "perceptron"
version = "0.1.0"
description = "A simple perceptron implemented from scratch."
readme = "README.md"
authors = [
    { name = "johvnik", email = "vaught.john@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
]
